// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionBar basic usage with ActionBar.Icon 1`] = `
<div>
  <div
    class="rc-action-bar rc-safe-area-bottom"
  >
    <div
      class="rc-action-bar-icon"
      role="button"
      tabindex="0"
    >
      <div
        class="rc-badge__wrapper rc-action-bar-icon__icon van-icon van-icon-chat-o"
      />
      客服
    </div>
    <div
      class="rc-action-bar-icon"
      role="button"
      tabindex="0"
    >
      <div
        class="rc-badge__wrapper rc-action-bar-icon__icon van-icon van-icon-cart-o"
      />
      购物车
    </div>
    <div
      class="rc-action-bar-icon"
      role="button"
      tabindex="0"
    >
      <div
        class="rc-badge__wrapper rc-action-bar-icon__icon van-icon van-icon-shop-o"
      />
      店铺
    </div>
    <button
      class="rc-action-bar-button rc-action-bar-button--danger rc-action-bar-button--last rc-action-bar-button--first rc-button rc-button--danger rc-button--large"
    >
      <div
        class="rc-button__content"
      >
        <span
          class="rc-button__text"
        >
          立即购买
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`ActionBar should allow to disable safe-area-inset-bottom prop 1`] = `
<div>
  <div
    class="rc-action-bar"
  >
    <div
      class="rc-action-bar-icon"
      role="button"
      tabindex="0"
    >
      <div
        class="rc-badge__wrapper rc-action-bar-icon__icon van-icon van-icon-chat-o"
      />
      客服
    </div>
    <div
      class="rc-action-bar-icon"
      role="button"
      tabindex="0"
    >
      <div
        class="rc-badge__wrapper rc-action-bar-icon__icon van-icon van-icon-cart-o"
      />
      购物车
    </div>
    <div
      class="rc-action-bar-icon"
      role="button"
      tabindex="0"
    >
      <div
        class="rc-badge__wrapper rc-action-bar-icon__icon van-icon van-icon-shop-o"
      />
      店铺
    </div>
  </div>
</div>
`;

exports[`ActionBar should render correctly when color prop in ActionBarIcon 1`] = `
<div>
  <div
    class="rc-action-bar rc-safe-area-bottom"
  >
    <div
      class="rc-action-bar-icon"
      role="button"
      tabindex="0"
    >
      <div
        class="rc-badge__wrapper rc-action-bar-icon__icon van-icon van-icon-chat-o"
        style="color: rgb(238, 10, 36);"
      />
      客服
    </div>
    <div
      class="rc-action-bar-icon"
      role="button"
      tabindex="0"
    >
      <div
        class="rc-badge__wrapper rc-action-bar-icon__icon van-icon van-icon-cart-o"
      />
      购物车
    </div>
    <div
      class="rc-action-bar-icon"
      role="button"
      tabindex="0"
    >
      <div
        class="rc-badge__wrapper rc-action-bar-icon__icon van-icon van-icon-star"
        style="color: rgb(255, 80, 0);"
      />
      店铺
    </div>
  </div>
</div>
`;

exports[`ActionBar should render correctly when icon prop in ActionBarIcon 1`] = `
<div>
  <div
    class="rc-action-bar rc-safe-area-bottom"
  >
    <div
      class="rc-action-bar-icon"
      role="button"
      tabindex="0"
    >
      <div
        class="rc-badge__wrapper rc-action-bar-icon__icon van-icon van-icon-chat-o"
        style="color: rgb(238, 10, 36);"
      />
      客服
    </div>
    <div
      class="rc-action-bar-icon"
      role="button"
      tabindex="0"
    >
      <div
        class="rc-badge__wrapper rc-action-bar-icon__icon"
      >
        <i
          class="rc-badge__wrapper van-icon van-icon-shop-o"
        />
      </div>
      购物车
    </div>
  </div>
</div>
`;

exports[`ActionBar should render correctly when using badge prop in ActionBarIcon 1`] = `
<div>
  <div
    class="rc-action-bar rc-safe-area-bottom"
  >
    <div
      class="rc-action-bar-icon"
      role="button"
      tabindex="0"
    >
      <div
        class="rc-badge__wrapper rc-action-bar-icon__icon van-icon van-icon-chat-o"
      >
        <div
          class="rc-badge rc-badge--top-right rc-badge--dot rc-badge--fixed"
        />
      </div>
      客服
    </div>
    <div
      class="rc-action-bar-icon"
      role="button"
      tabindex="0"
    >
      <div
        class="rc-badge__wrapper rc-action-bar-icon__icon van-icon van-icon-cart-o"
      >
        <div
          class="rc-badge rc-badge--top-right rc-badge--fixed"
        >
          5
        </div>
      </div>
      购物车
    </div>
  </div>
</div>
`;

exports[`ActionBar should render correctly when using color prop in ActionBarButton 1`] = `
<div>
  <div
    class="rc-action-bar rc-safe-area-bottom"
  >
    <button
      class="rc-action-bar-button rc-action-bar-button--warning rc-action-bar-button--first rc-button rc-button--warning rc-button--large"
      style="color: rgb(255, 255, 255); background: red; border-color: red;"
    >
      <div
        class="rc-button__content"
      >
        <span
          class="rc-button__text"
        >
          加入购物车
        </span>
      </div>
    </button>
    <button
      class="rc-action-bar-button rc-action-bar-button--danger rc-action-bar-button--last rc-button rc-button--danger rc-button--large"
      style="color: rgb(255, 255, 255); border: 0px;"
    >
      <div
        class="rc-button__content"
      >
        <span
          class="rc-button__text"
        >
          立即购买
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`ActionBar should render correctly when using icon prop in ActionBarButton 1`] = `
<div>
  <div
    class="rc-action-bar rc-safe-area-bottom"
  >
    <button
      class="rc-action-bar-button rc-action-bar-button--warning rc-action-bar-button--first rc-button rc-button--warning rc-button--large"
    >
      <div
        class="rc-button__content"
      >
        <i
          class="rc-badge__wrapper rc-button__icon van-icon van-icon-shop-o"
        />
        <span
          class="rc-button__text"
        >
          加入购物车
        </span>
      </div>
    </button>
    <button
      class="rc-action-bar-button rc-action-bar-button--danger rc-action-bar-button--last rc-button rc-button--danger rc-button--large"
    >
      <div
        class="rc-button__content"
      >
        <i
          class="rc-badge__wrapper van-icon van-icon-chat-o"
        />
        <span
          class="rc-button__text"
        >
          立即购买
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`ActionBar should render correctly when using type prop and text prop in ActionBarButton 1`] = `
<div>
  <div
    class="rc-action-bar rc-safe-area-bottom"
  >
    <button
      class="rc-action-bar-button rc-action-bar-button--warning rc-action-bar-button--first rc-button rc-button--warning rc-button--large"
    >
      <div
        class="rc-button__content"
      >
        <span
          class="rc-button__text"
        >
          加入购物车
        </span>
      </div>
    </button>
    <button
      class="rc-action-bar-button rc-action-bar-button--danger rc-action-bar-button--last rc-button rc-button--danger rc-button--large"
    >
      <div
        class="rc-button__content"
      >
        <span
          class="rc-button__text"
        >
          立即购买
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`ActionBar should render placeholder element when using placeholder prop 1`] = `
<div>
  <div
    class="rc-action-bar__placeholder"
    style="height: 50px;"
  >
    <div
      class="rc-action-bar"
    >
      <div
        class="rc-action-bar-icon"
        role="button"
        tabindex="0"
      >
        <div
          class="rc-badge__wrapper rc-action-bar-icon__icon van-icon van-icon-chat-o"
        />
        客服
      </div>
      <div
        class="rc-action-bar-icon"
        role="button"
        tabindex="0"
      >
        <div
          class="rc-badge__wrapper rc-action-bar-icon__icon van-icon van-icon-cart-o"
        />
        购物车
      </div>
      <div
        class="rc-action-bar-icon"
        role="button"
        tabindex="0"
      >
        <div
          class="rc-badge__wrapper rc-action-bar-icon__icon van-icon van-icon-shop-o"
        />
        店铺
      </div>
    </div>
  </div>
</div>
`;

exports[`ActionBar when ActionBarButton does not wrapperd by ActionBar 1`] = `
<div>
  <div>
    <button
      class="rc-action-bar-button rc-action-bar-button--warning rc-button rc-button--warning rc-button--large"
    >
      <div
        class="rc-button__content"
      >
        <span
          class="rc-button__text"
        >
          加入购物车
        </span>
      </div>
    </button>
    <button
      class="rc-action-bar-button rc-action-bar-button--danger rc-button rc-button--danger rc-button--large"
    >
      <div
        class="rc-button__content"
      >
        <span
          class="rc-button__text"
        >
          立即购买
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`ActionBar when ActionBarButton has children 1`] = `
<div>
  <div
    class="rc-action-bar rc-safe-area-bottom"
  >
    <button
      class="rc-action-bar-button rc-action-bar-button--warning rc-action-bar-button--first rc-button rc-button--warning rc-button--large"
    >
      <div
        class="rc-button__content"
      >
        <span
          class="rc-button__text"
        >
          加入购物车
        </span>
      </div>
    </button>
    <button
      class="rc-action-bar-button rc-action-bar-button--danger rc-action-bar-button--last rc-button rc-button--danger rc-button--large"
    >
      <div
        class="rc-button__content"
      >
        <span
          class="rc-button__text"
        >
          立即购买
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`ActionBar when icon prop in ActionBarIcon is not isValidElement 1`] = `
<div>
  <div
    class="rc-action-bar rc-safe-area-bottom"
  >
    <div
      class="rc-action-bar-icon"
      role="button"
      tabindex="0"
    >
      客服
    </div>
  </div>
</div>
`;
